2011-03-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* utils/urlgetautoproxy.py (UrlGetWithAutoProxy): Added new method 
	  'catch_error'.
	* po/it.po: Updated Italian translation.  Thanks Cristian Marchi!

2011-03-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* image/gtkimage.py: Added new gconf key 'filter/max_file_size_mb'
	  (issue #87).

2011-03-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* picasa.py, tumblr.py: More translation.
	* share/extra/flickrfavlist.py: Included an extra script for
	  flickr fav list.

2011-03-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/plugin.py: Added support for auth info on the Plugin
	  Treeview.

2011-03-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/facebook.py: Added support for 'News Feed' and 'Wall'.

2011-03-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/facebook.py: Added support for Facebook Authentication.

2011-03-02  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/facebook.py: Added support for Facebook Album.

2011-02-28  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/gphotoframe.schemas.in: Removed an obsolete gconf key:
	  ban_icon_enabled.
	* plugins/shotwell.py: Added a description field on shotwell photo
	  source dialog.
	* preferences/__init__.py: Added checking for double instances of
	  preferences.
	* photosource.py: Fixed a cursor lost problem.
	* liststore.py (PhotoListStore._show_photo_cb): Added checking for
	  recursion depth.

2011-02-27  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences/photosource.py: Added support for double clicking on
	  Photo Source Treeview to open Photo Source Dialog.

2011-02-26  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* photosource.py, gphotoframe.ui: Added icons on photo source ComboBox.

2011-02-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* liststore.py, photosource.py, treeview.py: Added icons on photo
	  source treeview.
	* liststore.py, plugins/base/base.py: Added delays for accessing API.
